--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,47 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>DJ Event Management</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <title>EventApp</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar">
-        <h1>🎧 DJ Night Events</h1>
-        <ul>
-            <li>Home</li>
-            <li>Events</li>
-            <li>Bookings</li>
-            <li>Contact</li>
-        </ul>
-    </nav>
+  <nav class="navbar">
+    <h1><center>🎉 EventApp</h1></center>
+  </nav>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <h2>Feel the Beat. Book the Night.</h2>
-        <p>Professional DJ services for weddings, parties & live events</p>
-        <button onclick="showAlert()">Book Now</button>
-    </section>
+  <section class="hero">
+    <h2>Discover Amazing Events</h2>
+    <p>Music · Tech · Weddings · Conferences</p>
+  </section>
 
-    <!-- Events Section -->
-    <section class="events">
-        <h2>Upcoming Events</h2>
+  <section class="events" id="events">
+    <!-- Cards loaded by JS -->
+  </section>
 
-        <div class="event-card">
-            <h3>🔥 EDM Night</h3>
-            <p>Date: 25 June 2025</p>
-            <p>Location: Kochi</p>
-        </div>
-
-        <div class="event-card">
-            <h3>🎶 Wedding Party</h3>
-            <p>Date: 2 July 2025</p>
-            <p>Location: Trivandrum</p>
-        </div>
-    </section>
-
-    <script src="js/app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
