--- a/frontend/login.html
+++ b/frontend/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Login | EventSphere</title>
+  <title>Login | EventSpheres</title>
   <style>
     * {
       margin: 0;
