chore: minor frontend comment for review flow

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,3 +1,8 @@
+
+<!-- Minor UI comment added for review practice -->
+<!-- PR review practice: no functional change -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
